--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,10 @@ export(label_percent_pl)
 export(palette_losy)
 export(percent_pl)
 export(pick_more_contrasting)
+export(scale_color_gradient_fg)
 export(scale_color_losy)
 export(scale_color_losy_fg)
+export(scale_colour_gradient_fg)
 export(scale_colour_losy)
 export(scale_colour_losy_fg)
 export(scale_fill_losy)
@@ -23,6 +25,7 @@ export(zmien_wielkosc_czcionek)
 export(zmien_wielkosc_etykiet)
 importFrom(extrafont,fonts)
 importFrom(ggplot2,"%+replace%")
+importFrom(ggplot2,continuous_scale)
 importFrom(ggplot2,discrete_scale)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
@@ -35,4 +38,6 @@ importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,unit)
 importFrom(ggplot2,waiver)
 importFrom(grDevices,col2rgb)
+importFrom(scales,colour_ramp)
 importFrom(scales,label_percent)
+importFrom(scales,new_continuous_palette)
