--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,9 @@ export(scale_colour_losy)
 export(scale_colour_losy_fg)
 export(scale_fill_losy)
 export(scale_fill_losy_fg)
+export(st_point_on_surface_sw)
 export(theme_losy)
+export(zlacz_z_mapa)
 export(zmien_prog_pokazywania_etykiet)
 export(zmien_rodzine_czcionek)
 export(zmien_rok_w_podpisie)
@@ -41,3 +43,6 @@ importFrom(grDevices,col2rgb)
 importFrom(scales,colour_ramp)
 importFrom(scales,label_percent)
 importFrom(scales,new_continuous_palette)
+importFrom(sf,st_point_on_surface)
+importFrom(sf,st_zm)
+importFrom(utils,data)
