Nowa funkcja: podmien_dane_wykresu()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(label_percent_pl)
 export(palette_losy)
 export(percent_pl)
 export(pick_more_contrasting)
+export(podmien_dane_wykresu)
+export(porownaj_strukture_danych)
 export(scale_color_gradient_fg)
 export(scale_color_losy)
 export(scale_color_losy_fg)
@@ -26,6 +28,7 @@ export(zmien_rok_w_podpisie)
 export(zmien_wielkosc_czcionek)
 export(zmien_wielkosc_etykiet)
 importFrom(extrafont,fonts)
+importFrom(ggplot2,"%+%")
 importFrom(ggplot2,"%+replace%")
 importFrom(ggplot2,continuous_scale)
 importFrom(ggplot2,discrete_scale)
