--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: LOSYkolory
 Type: Package
 Title: Skale kolorow wykorzystywane w systemie monitoringu karier absolwentow szkol ponadpodstawowych
-Version: 0.5.0
+Version: 0.6.0
 Authors@R: c(
     person(
       "Tomasz", "Żółtak",
@@ -18,6 +18,8 @@ Imports:
   ggplot2 (>= 4.0.0),
   scales,
   sf
+Suggests:
+  ggalluvial (>= 0.12.4)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
